--- a/wp-content/themes/twentyseventeen/assets/css/colors-dark.css
+++ b/wp-content/themes/twentyseventeen/assets/css/colors-dark.css
@@ -266,7 +266,7 @@ body.colors-dark,
 .colors-dark .taxonomy-description,
 .colors-dark .site-info a,
 .colors-dark .wp-caption {
-	color: #ccc;
+	color: #fff;
 }
 
 .colors-dark abbr,
